<?xml version="1.0" encoding="utf-8"?>
 <resources>
    <string name="app_name">CTk</string>
    <string name="action_settings">Settings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enter_area">Pickup Area</string>
    <string name="home">Home</string>
	<string name="modify">Modify Details</string>
	<string name="search">Search</string>
    <string name="title_activity_pick_area">PickArea</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="time_picker">Select Time</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="pick_up_address">Pickup Address</string>
    <string name="phone_no">Phone</string>
    <string name="cnfm_booking">Confirm Booking</string>

    <string-array name="fragment_drawer_items">
        <item>Daily Package</item>
        <item>My Rides</item>
        <item>Login/SignUp</item>
        <item>SIGN OUT</item>
        <item>Daily Package Submit</item>

    </string-array>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Page Under Construction</string>

</resources>
