<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.busapp.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/userNameLL"
            android:layout_width="342dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/username"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:gravity="left|center_vertical"
                android:textColor="#999999"
                android:textSize="20sp"
                android:textStyle="normal"
                android:background="#00000000"
                android:hint="@string/username"
                android:id="@+id/tvUserName"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/passwordLL"
            android:layout_width="342dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/password"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:gravity="left|center_vertical"
                android:background="#00000000"
                android:textColor="#999999"
                android:textSize="20sp"
                android:textStyle="normal"
                android:hint="@string/password"
                android:id="@+id/tvPassword" />/>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/nameLL"
                android:layout_width="342dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/name"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="0dp"
                    android:gravity="left|center_vertical"
                    android:textColor="#999999"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:background="#00000000"
                    android:hint="@string/name"
                    android:id="@+id/tvName"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/phoneNumberLL"
                android:layout_width="342dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/phone"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="0dp"
                    android:gravity="left|center_vertical"
                    android:textColor="#999999"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:background="#00000000"
                    android:hint="@string/phone_no"
                    android:id="@+id/tvPhoneNumber"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/signUpBtnInSignUp"
            android:layout_width="342dp"
            android:layout_marginTop="15dp"
            android:layout_height="40dp"
            android:text="@string/sign_up"

            />
        <Button
            android:id="@+id/loginBtnInSignUp"
            android:layout_width="342dp"
            android:layout_height="40dp"
            android:text="@string/login"
            />
    </LinearLayout>
</FrameLayout>
