<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.busapp.DailyPackageFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/db1_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C4C4C4"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="50dp"
            android:layout_weight="0.06"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/shortJourneyLL"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="0dp"
                android:background="#999999"
                android:checked="true"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView android:id="@+id/shortJourneyTV"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="4 hrs/40 km"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/longJourneyLL"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="#ffffff"
                android:checked="false"
                android:orientation="horizontal">

                <TextView android:id="@+id/longJourneyTV"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="8 hrs/80 km"
                    android:textColor="#999999"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/pickAreaLL"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".50"
                android:background="#999999"
                android:gravity="left"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/pickAreaInnerLL"
                    android:layout_width="342dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="4dp"
                        android:src="@drawable/locationpin"
                        />
                    <TextView
                        android:id="@+id/areaText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:gravity="left|center_vertical"
                        android:hint="@string/enter_area"
                        android:textColor="#999999"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calendarPickerLayout"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="35dp"
            android:layout_weight=".25"
            android:background="#ffffff"
            android:gravity="center"
            android:longClickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvDay"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:textSize="25dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/timePickerLayout"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="35dp"
            android:layout_weight=".25"
            android:background="#ffffff"
            android:gravity="center"
            android:longClickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHourMin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:text="@string/time_picker"
                android:textSize="25dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="0dip"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" />

            <Button
                android:id="@+id/searchCabBn"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|center"
                android:background="#E7AD30"
                android:text="@string/search" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
